apps/chores/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chores
spec:
  selector:
    app: chores
  ports:
    - name: http
      port: 8080
      targetPort: http
